--- a/packages/theme/fonts/reg-ital-bold.css
+++ b/packages/theme/fonts/reg-ital-bold.css
@@ -1,8 +1,8 @@
 @font-face {
   font-family: 'Phantom Sans';
-  src: url('https://hackclub.com/fonts/Phantom_Sans_0.6/Regular.woff')
+  src: url('https://assets.hackclub.com/fonts/Phantom_Sans_0.7/Regular.woff')
       format('woff'),
-    url('https://hackclub.com/fonts/Phantom_Sans_0.6/Regular.woff2')
+    url('https://assets.hackclub.com/fonts/Phantom_Sans_0.7/Regular.woff2')
       format('woff2');
   font-weight: normal;
   font-style: normal;
@@ -10,9 +10,9 @@
 }
 @font-face {
   font-family: 'Phantom Sans';
-  src: url('https://hackclub.com/fonts/Phantom_Sans_0.6/Italic.woff')
+  src: url('https://assets.hackclub.com/fonts/Phantom_Sans_0.7/Italic.woff')
       format('woff'),
-    url('https://hackclub.com/fonts/Phantom_Sans_0.6/Italic.woff2')
+    url('https://assets.hackclub.com/fonts/Phantom_Sans_0.7/Italic.woff2')
       format('woff2');
   font-weight: normal;
   font-style: italic;
@@ -20,9 +20,9 @@
 }
 @font-face {
   font-family: 'Phantom Sans';
-  src: url('https://hackclub.com/fonts/Phantom_Sans_0.6/Bold.woff')
+  src: url('https://assets.hackclub.com/fonts/Phantom_Sans_0.7/Bold.woff')
       format('woff'),
-    url('https://hackclub.com/fonts/Phantom_Sans_0.6/Bold.woff2')
+    url('https://assets.hackclub.com/fonts/Phantom_Sans_0.7/Bold.woff2')
       format('woff2');
   font-weight: bold;
   font-style: normal;
