--- a/packages/theme/fonts/reg.css
+++ b/packages/theme/fonts/reg.css
@@ -1,8 +1,8 @@
 @font-face {
   font-family: 'Phantom Sans';
-  src: url('https://hackclub.com/fonts/Phantom_Sans_0.6/Regular.woff')
+  src: url('https://assets.hackclub.com/fonts/Phantom_Sans_0.7/Regular.woff')
       format('woff'),
-    url('https://hackclub.com/fonts/Phantom_Sans_0.6/Regular.woff2')
+    url('https://assets.hackclub.com/fonts/Phantom_Sans_0.7/Regular.woff2')
       format('woff2');
   font-weight: normal;
   font-style: normal;
