ran Prettier on the fonts
npx prettier --write .
in theme/packages/theme/fonts

hopefully this passes prettier

--- a/packages/theme/fonts/reg-bold.css
+++ b/packages/theme/fonts/reg-bold.css
@@ -1,6 +1,7 @@
 @font-face {
   font-family: 'Phantom Sans';
-  src: url('https://assets.hackclub.com/fonts/Phantom_Sans_0.7/Regular.woff')
+  src:
+    url('https://assets.hackclub.com/fonts/Phantom_Sans_0.7/Regular.woff')
       format('woff'),
     url('https://assets.hackclub.com/fonts/Phantom_Sans_0.7/Regular.woff2')
       format('woff2');
@@ -10,7 +11,8 @@
 }
 @font-face {
   font-family: 'Phantom Sans';
-  src: url('https://assets.hackclub.com/fonts/Phantom_Sans_0.7/Bold.woff')
+  src:
+    url('https://assets.hackclub.com/fonts/Phantom_Sans_0.7/Bold.woff')
       format('woff'),
     url('https://assets.hackclub.com/fonts/Phantom_Sans_0.7/Bold.woff2')
       format('woff2');
