--- a/packages/theme/fonts/reg.css
+++ b/packages/theme/fonts/reg.css
@@ -1,6 +1,7 @@
 @font-face {
   font-family: 'Phantom Sans';
-  src: url('https://assets.hackclub.com/fonts/Phantom_Sans_0.7/Regular.woff')
+  src:
+    url('https://assets.hackclub.com/fonts/Phantom_Sans_0.7/Regular.woff')
       format('woff'),
     url('https://assets.hackclub.com/fonts/Phantom_Sans_0.7/Regular.woff2')
       format('woff2');
